methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:2: error: ':' expected but ')' found.
def hunt(c) {
          ^SlugSnail:31: error: identifier expected but '}' found.
}
^